// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General renders correctly 1`] = `
<_default
  androidSettings={
    Object {
      "artifactExposingWorkflows": "All",
      "selectedKeystoreFile": Object {
        "name": "abcdefghijkl1234567",
      },
      "selectedServiceAccountJsonFile": Object {
        "name": "abcdefghijkl12345671566",
      },
      "track": "Release",
    }
  }
  certificates={
    Array [
      Object {
        "name": "iPhone Developer: John Doe (ABCD1234)",
      },
      Object {
        "name": "iPhone Developer: John Doe (ABCD5678)",
      },
    ]
  }
  iosSettings={
    Object {
      "appSku": "Fill",
      "appSpecificPassword": "Fill",
      "appleDeveloperAccountEmail": "Fill",
      "artifactExposingWorkflows": "All",
      "selectedCertificate": Object {
        "name": "iPhone Developer: John Doe (ABCD5678)",
      },
      "selectedProvProfile": Object {
        "name": "abcdefghijkl1234567",
      },
    }
  }
  keystoreFiles={
    Array [
      Object {
        "name": "abcdefghijkl1234567",
      },
      Object {
        "name": "abcdefghijkl12345671566",
      },
    ]
  }
  maximumNumberOfCertificates={30}
  onCancel={[Function]}
  onSave={[Function]}
  onSelectedFileChange={[Function]}
  onSettingsPropertyChange={[Function]}
  provProfiles={
    Array [
      Object {
        "name": "abcdefghijkl1234567",
      },
      Object {
        "name": "abcdefghijkl12345671566",
      },
    ]
  }
  serviceAccountJsonFiles={
    Array [
      Object {
        "name": "abcdefghijkl1234567",
      },
      Object {
        "name": "abcdefghijkl12345671566",
      },
    ]
  }
  showTooltips={true}
/>
`;

exports[`GeneralView when there are no Android settings does not render Android settings section 1`] = `
<Base
  maxWidth={660}
  paddingVertical="x8"
>
  <Base
    paddingHorizontal="x4"
  >
    <Base
      margin="x12"
    >
      <Text
        size="x5"
        weight="bold"
      >
        iOS Settings
      </Text>
      <Divider
        color="gray-2"
        direction="horizontal"
        margin="x4"
        width="0.125rem"
      />
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="1"
          columnWidth="1fr"
          direction="vertical"
          gap="x6"
          grow={true}
        >
          <Flex>
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <InputLabel>
                Expose Artifacts From the Selected Workflow to Ship
              </InputLabel>
              <Tooltip
                title="You can add multiple workflows divided with a comma. Eg.: Primary, Deploy"
              >
                <Component />
              </Tooltip>
            </Flex>
            <InputContainer>
              <Input
                name="artifactExposingWorkflows"
                onChange={[Function]}
                value="All"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              App SKU
            </InputLabel>
            <InputContainer>
              <Input
                name="appSku"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="1"
          columnWidth="1fr"
          direction="vertical"
          gap="x6"
          grow={true}
        >
          <Flex>
            <InputLabel
              margin="x1"
            >
              Apple Developer Account Email
            </InputLabel>
            <InputContainer>
              <Input
                name="appleDeveloperAccountEmail"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              App Specific Password
            </InputLabel>
            <InputContainer>
              <Input
                name="appSpecificPassword"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Base
        margin="x6"
      >
        <Flex
          alignChildrenHorizontal="between"
          direction="vertical"
          gap="x1"
          margin="x1"
        >
          <Text
            size="x3"
            weight="bold"
          >
            App Store Provisioning Profile
          </Text>
          <Link
            color="grape-3"
            href="#"
          >
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <Text
                size="x3"
              >
                Edit Profiles and Certificates on Bitrise
              </Text>
              <Icon
                name="OpenInBrowser"
                size="1.5rem"
              />
            </Flex>
          </Link>
        </Flex>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
      <Base
        margin="x6"
      >
        <Text
          margin="x1"
          size="x3"
          weight="bold"
        >
          Code Signing Identity (
          2
          /
          30
          )
        </Text>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                iPhone Developer: John Doe (ABCD1234)
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                iPhone Developer: John Doe (ABCD5678)
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
    </Base>
    <Flex
      alignChildrenHorizontal="end"
      direction="horizontal"
      gap="x4"
      margin="x12"
    >
      <Button
        level="secondary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Cancel
      </Button>
      <Button
        level="primary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Save
      </Button>
    </Flex>
  </Base>
</Base>
`;

exports[`GeneralView when there are no iOS settings does not render iOS settings section 1`] = `
<Base
  maxWidth={660}
  paddingVertical="x8"
>
  <Base
    paddingHorizontal="x4"
  >
    <Base
      margin="x12"
    >
      <Text
        size="x5"
        weight="bold"
      >
        Android Settings
      </Text>
      <Divider
        color="gray-2"
        direction="horizontal"
        margin="x4"
        width="0.125rem"
      />
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="1"
          columnWidth="1fr"
          direction="vertical"
          gap="x6"
          grow={true}
        >
          <Flex>
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <InputLabel>
                Expose Artifacts From the Selected Workflow to Ship
              </InputLabel>
              <Tooltip
                title="You can add multiple workflows divided with a comma. Eg.: Primary, Deploy"
              >
                <Component />
              </Tooltip>
            </Flex>
            <InputContainer>
              <Input
                name="artifactExposingWorkflows"
                onChange={[Function]}
                value="All"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              Track
            </InputLabel>
            <InputContainer>
              <Input
                name="track"
                onChange={[Function]}
                value="Release"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Base
        margin="x6"
      >
        <Flex
          alignChildrenHorizontal="between"
          direction="vertical"
          gap="x1"
          margin="x1"
        >
          <Text
            size="x3"
            weight="bold"
          >
            Android Keystore Files
          </Text>
          <Link
            color="grape-3"
            href="#"
          >
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <Text
                size="x3"
              >
                Edit Keystore and JSON files on Bitrise
              </Text>
              <Icon
                name="OpenInBrowser"
                size="1.5rem"
              />
            </Flex>
          </Link>
        </Flex>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
      <Base
        margin="x6"
      >
        <Text
          margin="x1"
          size="x3"
          weight="bold"
        >
          Android Service Account JSON File
        </Text>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
    </Base>
    <Flex
      alignChildrenHorizontal="end"
      direction="horizontal"
      gap="x4"
      margin="x12"
    >
      <Button
        level="secondary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Cancel
      </Button>
      <Button
        level="primary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Save
      </Button>
    </Flex>
  </Base>
</Base>
`;

exports[`GeneralView when viewed on desktop renders the view correctly 1`] = `
<Base
  maxWidth="100%"
  paddingVertical="x8"
>
  <Base
    paddingHorizontal="x0"
  >
    <Base
      margin="x12"
    >
      <Text
        size="x5"
        weight="bold"
      >
        iOS Settings
      </Text>
      <Divider
        color="gray-2"
        direction="horizontal"
        margin="x4"
        width="0.125rem"
      />
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="2"
          columnWidth="1fr"
          direction="horizontal"
          gap="x6"
          grow={true}
        >
          <Flex>
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <InputLabel>
                Expose Artifacts From the Selected Workflow to Ship
              </InputLabel>
              <Tooltip
                title="You can add multiple workflows divided with a comma. Eg.: Primary, Deploy"
              >
                <Component />
              </Tooltip>
            </Flex>
            <InputContainer>
              <Input
                name="artifactExposingWorkflows"
                onChange={[Function]}
                value="All"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              App SKU
            </InputLabel>
            <InputContainer>
              <Input
                name="appSku"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="2"
          columnWidth="1fr"
          direction="horizontal"
          gap="x6"
          grow={true}
        >
          <Flex>
            <InputLabel
              margin="x1"
            >
              Apple Developer Account Email
            </InputLabel>
            <InputContainer>
              <Input
                name="appleDeveloperAccountEmail"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              App Specific Password
            </InputLabel>
            <InputContainer>
              <Input
                name="appSpecificPassword"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Base
        margin="x6"
      >
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x1"
          margin="x1"
        >
          <Text
            size="x3"
            weight="bold"
          >
            App Store Provisioning Profile
          </Text>
          <Link
            color="grape-3"
            href="#"
          >
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <Text
                size="x3"
              >
                Edit Profiles and Certificates on Bitrise
              </Text>
              <Icon
                name="OpenInBrowser"
                size="1.5rem"
              />
            </Flex>
          </Link>
        </Flex>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
      <Base
        margin="x6"
      >
        <Text
          margin="x1"
          size="x3"
          weight="bold"
        >
          Code Signing Identity (
          2
          /
          30
          )
        </Text>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                iPhone Developer: John Doe (ABCD1234)
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                iPhone Developer: John Doe (ABCD5678)
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Text
        size="x5"
        weight="bold"
      >
        Android Settings
      </Text>
      <Divider
        color="gray-2"
        direction="horizontal"
        margin="x4"
        width="0.125rem"
      />
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="2"
          columnWidth="1fr"
          direction="horizontal"
          gap="x6"
          grow={true}
        >
          <Flex>
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <InputLabel>
                Expose Artifacts From the Selected Workflow to Ship
              </InputLabel>
              <Tooltip
                title="You can add multiple workflows divided with a comma. Eg.: Primary, Deploy"
              >
                <Component />
              </Tooltip>
            </Flex>
            <InputContainer>
              <Input
                name="artifactExposingWorkflows"
                onChange={[Function]}
                value="All"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              Track
            </InputLabel>
            <InputContainer>
              <Input
                name="track"
                onChange={[Function]}
                value="Release"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Base
        margin="x6"
      >
        <Flex
          alignChildrenHorizontal="between"
          direction="horizontal"
          gap="x1"
          margin="x1"
        >
          <Text
            size="x3"
            weight="bold"
          >
            Android Keystore Files
          </Text>
          <Link
            color="grape-3"
            href="#"
          >
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <Text
                size="x3"
              >
                Edit Keystore and JSON files on Bitrise
              </Text>
              <Icon
                name="OpenInBrowser"
                size="1.5rem"
              />
            </Flex>
          </Link>
        </Flex>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
      <Base
        margin="x6"
      >
        <Text
          margin="x1"
          size="x3"
          weight="bold"
        >
          Android Service Account JSON File
        </Text>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
    </Base>
    <Flex
      alignChildrenHorizontal="end"
      direction="horizontal"
      gap="x4"
      margin="x12"
    >
      <Button
        level="secondary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Cancel
      </Button>
      <Button
        level="primary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Save
      </Button>
    </Flex>
  </Base>
</Base>
`;

exports[`GeneralView when viewed on mobile renders the view correctly 1`] = `
<Base
  maxWidth={660}
  paddingVertical="x8"
>
  <Base
    paddingHorizontal="x4"
  >
    <Base
      margin="x12"
    >
      <Text
        size="x5"
        weight="bold"
      >
        iOS Settings
      </Text>
      <Divider
        color="gray-2"
        direction="horizontal"
        margin="x4"
        width="0.125rem"
      />
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="1"
          columnWidth="1fr"
          direction="vertical"
          gap="x6"
          grow={true}
        >
          <Flex>
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <InputLabel>
                Expose Artifacts From the Selected Workflow to Ship
              </InputLabel>
              <Tooltip
                title="You can add multiple workflows divided with a comma. Eg.: Primary, Deploy"
              >
                <Component />
              </Tooltip>
            </Flex>
            <InputContainer>
              <Input
                name="artifactExposingWorkflows"
                onChange={[Function]}
                value="All"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              App SKU
            </InputLabel>
            <InputContainer>
              <Input
                name="appSku"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="1"
          columnWidth="1fr"
          direction="vertical"
          gap="x6"
          grow={true}
        >
          <Flex>
            <InputLabel
              margin="x1"
            >
              Apple Developer Account Email
            </InputLabel>
            <InputContainer>
              <Input
                name="appleDeveloperAccountEmail"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              App Specific Password
            </InputLabel>
            <InputContainer>
              <Input
                name="appSpecificPassword"
                onChange={[Function]}
                value="Fill"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Base
        margin="x6"
      >
        <Flex
          alignChildrenHorizontal="between"
          direction="vertical"
          gap="x1"
          margin="x1"
        >
          <Text
            size="x3"
            weight="bold"
          >
            App Store Provisioning Profile
          </Text>
          <Link
            color="grape-3"
            href="#"
          >
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <Text
                size="x3"
              >
                Edit Profiles and Certificates on Bitrise
              </Text>
              <Icon
                name="OpenInBrowser"
                size="1.5rem"
              />
            </Flex>
          </Link>
        </Flex>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
      <Base
        margin="x6"
      >
        <Text
          margin="x1"
          size="x3"
          weight="bold"
        >
          Code Signing Identity (
          2
          /
          30
          )
        </Text>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                iPhone Developer: John Doe (ABCD1234)
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                iPhone Developer: John Doe (ABCD5678)
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Text
        size="x5"
        weight="bold"
      >
        Android Settings
      </Text>
      <Divider
        color="gray-2"
        direction="horizontal"
        margin="x4"
        width="0.125rem"
      />
      <Base
        margin="x6"
      >
        <Grid
          alignChildrenVertical="end"
          columnCount="1"
          columnWidth="1fr"
          direction="vertical"
          gap="x6"
          grow={true}
        >
          <Flex>
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <InputLabel>
                Expose Artifacts From the Selected Workflow to Ship
              </InputLabel>
              <Tooltip
                title="You can add multiple workflows divided with a comma. Eg.: Primary, Deploy"
              >
                <Component />
              </Tooltip>
            </Flex>
            <InputContainer>
              <Input
                name="artifactExposingWorkflows"
                onChange={[Function]}
                value="All"
              />
            </InputContainer>
          </Flex>
          <Flex>
            <InputLabel
              margin="x1"
            >
              Track
            </InputLabel>
            <InputContainer>
              <Input
                name="track"
                onChange={[Function]}
                value="Release"
              />
            </InputContainer>
          </Flex>
        </Grid>
      </Base>
    </Base>
    <Base
      margin="x12"
    >
      <Base
        margin="x6"
      >
        <Flex
          alignChildrenHorizontal="between"
          direction="vertical"
          gap="x1"
          margin="x1"
        >
          <Text
            size="x3"
            weight="bold"
          >
            Android Keystore Files
          </Text>
          <Link
            color="grape-3"
            href="#"
          >
            <Flex
              alignChildrenHorizontal="start"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
            >
              <Text
                size="x3"
              >
                Edit Keystore and JSON files on Bitrise
              </Text>
              <Icon
                name="OpenInBrowser"
                size="1.5rem"
              />
            </Flex>
          </Link>
        </Flex>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
      <Base
        margin="x6"
      >
        <Text
          margin="x1"
          size="x3"
          weight="bold"
        >
          Android Service Account JSON File
        </Text>
        <Divider
          color="gray-2"
          direction="horizontal"
          margin="x2"
          width="0.125rem"
        />
        <Base
          key="0"
        >
          <RadioButton
            checked={false}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl1234567
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
        <Base
          key="1"
        >
          <RadioButton
            checked={true}
            onChange={[Function]}
          >
            <Flex
              alignChildrenHorizontal="between"
              alignChildrenVertical="middle"
              direction="horizontal"
              gap="x1"
              margin="x1"
              paddingVertical="x3"
            >
              <Icon
                color="grape-4"
                name="Doc"
                size="2rem"
              />
              <Text
                size="x3"
              >
                abcdefghijkl12345671566
              </Text>
            </Flex>
          </RadioButton>
          <Divider
            color="gray-1"
            direction="horizontal"
            margin="x2"
            width="0.125rem"
          />
        </Base>
      </Base>
    </Base>
    <Flex
      alignChildrenHorizontal="end"
      direction="horizontal"
      gap="x4"
      margin="x12"
    >
      <Button
        level="secondary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Cancel
      </Button>
      <Button
        level="primary"
        onClick={[MockFunction]}
        size="medium"
        width="8rem"
      >
        Save
      </Button>
    </Flex>
  </Base>
</Base>
`;
